--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
     <head>
-        <title>Todo Application</title>
+        <title>Schedule Application</title>
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
